<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:weightSum="9"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >

            <TextView
                android:id="@+id/card_return_deno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/card_returns_denomination" />

            <TextView
                android:layout_weight="2"
                android:id="@+id/card_return_bulkCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/card_returns_bulkcode" />

            <TextView
                android:layout_weight="2"
                android:id="@+id/card_return_startserial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/card_returns_start_serial" />

            <TextView
                android:layout_weight="2"
                android:id="@+id/card_return_endserial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/card_returns_end_serial" />

            <TextView
                android:layout_weight="0.5"
                android:id="@+id/card_return_numberofcards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/card_returns_cards_count" />
            
            <TextView
                android:layout_weight="1"
                android:id="@+id/card_return_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/card_returns_return_type" />
            
            <Button
                android:layout_weight="0.5"
                android:id="@+id/card_return_removebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/delete"
                android:onClick="OnClickApprovedCard"  />

        </LinearLayout>

</RelativeLayout>