<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:ignore="Deprecated" >


    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="5"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:id="@+id/lableDenomination"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:textSize="12sp"
            android:text="50000"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="0dp" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/lablesalescountnumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="start"
            android:text="@string/cashier_model_lable_Sales_card_count_number"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="11sp" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/lablesalesamountnumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="start"
            android:text="@string/cashier_model_lable_Sales_card_mount_number"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="11sp" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/lableInhandcountnumber"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="start"
            android:text="@string/cashier_model_lable_inhand_card_count_number"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="11sp"
            android:layout_width="0dp" />

        <TextView
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:id="@+id/lableInhandamountnumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="start"
            android:text="@string/cashier_model_lable_inhand_card_mount_number"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="11sp"
            android:layout_marginLeft="10dp" />

    </LinearLayout>


</LinearLayout>