<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">

  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/back_main" >


      <!-- Footer Ends -->

      <!-- Menu -->

    <LinearLayout
        
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="70dip"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/radioMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioVisit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_visit"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/radio_card"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioFault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_fault"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RadioGroup>

        <!--
         <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        -->

        <Button
            android:id="@+id/btnCon"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:onClick="myClickHandler"
            android:text="Continue" />

        <TextView
            android:id="@+id/menuerrortv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout1"
            android:layout_marginLeft="18dp"
            android:text=""
            android:textColor="#372c24" />
    </LinearLayout>

      <!-- Menu Form Ends -->

    <ImageView
        android:layout_width="114dp"
        android:layout_height="128dp"
        android:src="@drawable/logo" />
     
  </RelativeLayout>

</ScrollView>
